dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.5 $)

AC_INIT(src/Clock.cxx)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(facilities, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CXX

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Check for location of installed GLAST libraries
glast_CHECK_ROOT

AC_OUTPUT(Makefile facilities.spec facilities/Makefile src/Makefile)


AC_MSG_RESULT([
	facilities package now configured.
])

