## Process this file with automake to produce Makefile.in
#
# $Id: Makefile.am,v 1.2 1999/12/25 02:25:35 pfkeb Exp $
#
# Author: Paul_Kunz@slac.stanford.edu
#

# The following set,  else would follow GNU conventions
AUTOMAKE_OPTIONS = foreign

lib_LTLIBRARIES = libfacilities.la

libfacilities_la_SOURCES = \
	Clock.cxx          \
	ScheduledEvent.cxx \
	Scheduler.cxx

libfacilities_la_LDFLAGS = -version-info 1

INCLUDES = -I$(top_srcdir) \
	-I$(glast_prefix)/include
